# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
module(
    name = "score_toolchains_rust",
    version = "0.1.1",
    compatibility_level = 0,
)

bazel_dep(name = "rules_rust", version = "0.56.0")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "score_bazel_platforms", version = "0.0.3")
bazel_dep(name = "rust_qnx8_toolchain", version = "1.2.0")
archive_override(
    module_name = "rust_qnx8_toolchain",
    urls = [
        "https://github.com/qorix-group/rust-lang-qnx8/releases/download/1.2.0/qnx8_rust_toolchain.tar.gz",
    ],
    strip_prefix = "qnx8",
    integrity = "sha256-eQOopREOYCL5vtTb6c1cwZrql4GVrJ1FqgxarQRe1xs=",
)
