# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

# the qnx_rust will be an external repo containing the built binaries for the target

load("@rules_rust//rust:toolchain.bzl", "rust_toolchain")

# ---- toolchain ----
rust_toolchain(
    name = "rust_toolchain_aarch64_qnx8_0",

    # host tools from the external repo produced by the tarball
    rustc         = "@rust_qnx8_toolchain//:rustc",
    cargo         = "@rust_qnx8_toolchain//:cargo",
    rust_doc       = "@rust_qnx8_toolchain//:rustdoc",        
    clippy_driver = "@rust_qnx8_toolchain//:clippy_driver",
    rust_std      = "@rust_qnx8_toolchain//:rust_std-aarch64-unknown-qnx8_0",

    # libs needed by rustc on host
    rustc_lib     = "@rust_qnx8_toolchain//:rustc_lib",

    # triples / extensions
    target_triple = "aarch64-unknown-nto-qnx800",
    exec_triple   = "x86_64-unknown-linux-gnu",
    staticlib_ext = ".a",
    dylib_ext     = ".so",
    binary_ext    = "",

    default_edition = "2021",

    stdlib_linkflags = [],
    extra_rustc_flags = [],
    extra_exec_rustc_flags = [],
    tags = ["manual"],
)

toolchain(
    name = "toolchain_aarch64_qnx8_0",
    toolchain_type = "@rules_rust//rust:toolchain_type",
    toolchain = ":rust_toolchain_aarch64_qnx8_0",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:arm64",
        "@platforms//os:qnx",
        "@score_bazel_platforms//:qnx8_0"
    ],
)
