################################################################################
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
################################################################################

package(default_visibility = ["//visibility:public"])

# Re-export the built-in Ferrocene toolchains configured in this module's
# `MODULE.bazel` to keep consumer repositories simple.

alias(
    name = "ferrocene_x86_64_unknown_linux_gnu",
    actual = "@ferrocene_x86_64_unknown_linux_gnu//:rust_ferrocene_toolchain",
)

alias(
    name = "ferrocene_x86_64_pc_nto_qnx800",
    actual = "@ferrocene_x86_64_pc_nto_qnx800//:rust_ferrocene_toolchain",
)

alias(
    name = "ferrocene_aarch64_unknown_nto_qnx800",
    actual = "@ferrocene_aarch64_unknown_nto_qnx800//:rust_ferrocene_toolchain",
)
