################################################################################
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
################################################################################

package(default_visibility = ["//visibility:public"])

# Re-export the built-in Ferrocene toolchains configured in this module's
# `MODULE.bazel` to keep consumer repositories simple.

alias(
    name = "ferrocene_x86_64_unknown_linux_gnu",
    actual = "@ferrocene_x86_64_unknown_linux_gnu//:rust_ferrocene_toolchain",
)

alias(
    name = "ferrocene_x86_64_unknown_linux_gnu_symbol-report",
    actual = "@ferrocene_x86_64_unknown_linux_gnu//:symbol-report-wrapper",
)

alias(
    name = "ferrocene_x86_64_unknown_linux_gnu_blanket",
    actual = "@ferrocene_x86_64_unknown_linux_gnu//:blanket-wrapper",
)

alias(
    name = "ferrocene_aarch64_unknown_linux_gnu",
    actual = "@ferrocene_aarch64_unknown_linux_gnu//:rust_ferrocene_toolchain",
)

alias(
    name = "ferrocene_aarch64_unknown_linux_gnu_symbol-report",
    actual = "@ferrocene_aarch64_unknown_linux_gnu//:symbol-report-wrapper",
)

alias(
    name = "ferrocene_aarch64_unknown_linux_gnu_blanket",
    actual = "@ferrocene_aarch64_unknown_linux_gnu//:blanket-wrapper",
)

alias(
    name = "ferrocene_aarch64_unknown_linux_gnu_miri",
    actual = "@ferrocene_aarch64_unknown_linux_gnu_rules_rust_miri//:rust_ferrocene_miri_toolchain",
)

alias(
    name = "ferrocene_aarch64_unknown_linux_gnu_miri_driver",
    actual = "@ferrocene_aarch64_unknown_linux_gnu//:miri",
)

alias(
    name = "ferrocene_aarch64_unknown_linux_gnu_miri_sysroot_files",
    actual = "@ferrocene_aarch64_unknown_linux_gnu//:miri-sysroot-files",
)

alias(
    name = "ferrocene_aarch64_unknown_linux_gnu_miri_runtime_files",
    actual = "@ferrocene_aarch64_unknown_linux_gnu//:miri-runtime-files",
)

alias(
    name = "ferrocene_x86_64_pc_nto_qnx800",
    actual = "@ferrocene_x86_64_pc_nto_qnx800//:rust_ferrocene_toolchain",
)

alias(
    name = "ferrocene_x86_64_pc_nto_qnx800_symbol-report",
    actual = "@ferrocene_x86_64_pc_nto_qnx800//:symbol-report-wrapper",
)

alias(
    name = "ferrocene_x86_64_pc_nto_qnx800_blanket",
    actual = "@ferrocene_x86_64_pc_nto_qnx800//:blanket-wrapper",
)

alias(
    name = "ferrocene_x86_64_pc_nto_qnx800_miri",
    actual = "@ferrocene_x86_64_pc_nto_qnx800_rules_rust_miri//:rust_ferrocene_miri_toolchain",
)

alias(
    name = "ferrocene_x86_64_pc_nto_qnx800_miri_driver",
    actual = "@ferrocene_x86_64_pc_nto_qnx800//:miri",
)

alias(
    name = "ferrocene_x86_64_pc_nto_qnx800_miri_sysroot_files",
    actual = "@ferrocene_x86_64_pc_nto_qnx800//:miri-sysroot-files",
)

alias(
    name = "ferrocene_x86_64_pc_nto_qnx800_miri_runtime_files",
    actual = "@ferrocene_x86_64_pc_nto_qnx800//:miri-runtime-files",
)

alias(
    name = "ferrocene_aarch64_unknown_nto_qnx800",
    actual = "@ferrocene_aarch64_unknown_nto_qnx800//:rust_ferrocene_toolchain",
)

alias(
    name = "ferrocene_aarch64_unknown_nto_qnx800_symbol-report",
    actual = "@ferrocene_aarch64_unknown_nto_qnx800//:symbol-report-wrapper",
)

alias(
    name = "ferrocene_aarch64_unknown_nto_qnx800_blanket",
    actual = "@ferrocene_aarch64_unknown_nto_qnx800//:blanket-wrapper",
)

alias(
    name = "ferrocene_aarch64_unknown_nto_qnx800_miri",
    actual = "@ferrocene_aarch64_unknown_nto_qnx800_rules_rust_miri//:rust_ferrocene_miri_toolchain",
)

alias(
    name = "ferrocene_aarch64_unknown_nto_qnx800_miri_driver",
    actual = "@ferrocene_aarch64_unknown_nto_qnx800//:miri",
)

alias(
    name = "ferrocene_aarch64_unknown_nto_qnx800_miri_sysroot_files",
    actual = "@ferrocene_aarch64_unknown_nto_qnx800//:miri-sysroot-files",
)

alias(
    name = "ferrocene_aarch64_unknown_nto_qnx800_miri_runtime_files",
    actual = "@ferrocene_aarch64_unknown_nto_qnx800//:miri-runtime-files",
)

alias(
    name = "ferrocene_x86_64_unknown_linux_gnu_miri",
    actual = "@ferrocene_x86_64_unknown_linux_gnu_rules_rust_miri//:rust_ferrocene_miri_toolchain",
)

alias(
    name = "ferrocene_x86_64_unknown_linux_gnu_miri_driver",
    actual = "@ferrocene_x86_64_unknown_linux_gnu//:miri",
)

alias(
    name = "ferrocene_x86_64_unknown_linux_gnu_miri_sysroot_files",
    actual = "@ferrocene_x86_64_unknown_linux_gnu//:miri-sysroot-files",
)

alias(
    name = "ferrocene_x86_64_unknown_linux_gnu_miri_runtime_files",
    actual = "@ferrocene_x86_64_unknown_linux_gnu//:miri-runtime-files",
)
